nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx.example.com
  labels:
    app: nginx
spec:
  containers:
  - name: nginx-demo
    image: nginx
    ports:
    - name: nginx-port
      containerPort: 80
